@@ -22,18 +22,3 @@ plugins {
     kotlin("jvm") version "1.9.21"
     kotlin("kapt") version "1.9.21"
 }
-/*
-tasks.register<Delete>("clean") {
-    delete(rootProject.buildDir)
-}
-*/
-/*
-tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile>().configureEach {
-    kotlinOptions {
-        jvmTarget = "17"
-        freeCompilerArgs += listOf(
-            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
-        )
-    }
-}
- */
